# FREAR_python

./: .gitignore  README.md  pyproject.toml  pytest.ini
data_conversion/: convert_data.ipynb
src/frear/: MCMC_aux.py  MT_DREAMzs.py  MT_DREAMzs_parallel.py  __init__.py  accFOR.py  analyse_chain.py  bayes.py  checkpoints_upd.py  cost_analyse.py  cost_calc.py  domain.py  ll_Yee2017.py  ll_Yee2017_usinglog.py  maincomp_calcErr.py  maincomp_model_setup.py  maincomp_prepBayes.py  maincomp_prepBayes_upd.py  maincomp_readdata.py  maincomp_readdata_optimized.py  maincomp_srr.py  maincomp_srr_upd.py  maxPSR.py  modelErr.py  paths.py  plot_geofield.py  plot_timeseries.py  read_samples.py  read_srs_SRM.py  readwriteOutput.py  settings.py  srs2AC_aux.py  srs2AC_bayes_contRel.py  srs2AC_bayes_nsegmentsRel.py  srs2AC_bayes_rectRelease.py  srs2AC_cost_contRel.py  srs2AC_cost_nsegmentsRel.py  srs2AC_tools.py  tools.py  write_bayes.py
test_case/expdir/: main.R  main.py  memory_efficient_main.py
test_case/expdir/cmp/: ARs.npy  ARs.rds  MDC.npy  MDC.rds  Rhats.npy  Rhats.rds  X.npy  X.rds  Z.npy  Z.rds  accFOR.npy  accFOR.rds  chainburned.npy  chainburned.rds  chains.npy  chains.rds  chains_init.npy  chains_init.rds  maxPSR.npy  maxPSR.rds  obs.npy  obs.rds  obs_error.npy  obs_error.rds  optsed_Qs.npy  optsed_Qs.rds  optsed_accQ.npy  optsed_accQ.rds  optsed_costs.npy  optsed_costs.rds  probloc.npy  probloc.rds  samples.csv  zchainSummary.npy  zchainSummary.rds
test_case/tests/: conftest.py  test_data.py  test_functions.py  test_shapes.py
tests/: test_tools.py
